[package]
name = "nom-bibtex"
version = "0.4.0"
authors = ["Charles Vandevoorde <charles.vandevoorde@hotmail.be>"]
edition = "2021"
description = "BibTeX parser using nom."
documentation = "https://docs.rs/nom-bibtex"
repository = "https://github.com/charlesvdv/nom-bibtex"
license = "MIT"
keywords = ["bibtex", "latex", "nom", "parser"]
categories = ["parsing"]

[lib]
name = "nom_bibtex"

[dependencies]
nom = "7.1.0"
nom-tracable = "0.9"
nom_locate = "4.1"
quick-error = "2.0"

[features]
default = []
trace = ["nom-tracable/trace"]
